syntax = "proto3";

//空操作
message EmptyReq
{    

}
